src/examples/errors/02_undefined_variable.veri
// Error: Using undefined variable
// Expected error: E002 - Cannot find variable

fn main() -> int {
    let x: int = 5;
    x + y
}
